Add format for the question column

--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -844,6 +844,7 @@
 	"training.status.stopped": "Cancelado",
 	"training.status.succeeded": "Completat amb èxit",
 	"training.training": "Entrenamiento",
+	"upload.answer_format": "Formato de respuesta",
 	"upload.check_files": "Comprueba el estado de los ficheros",
 	"upload.completed": "completado",
 	"upload.conflict": "Ya existe un archivo con el mismo nombre.",
@@ -864,7 +865,7 @@
 	"upload.qna_csv_description": "Cree un recurso de preguntas y respuestas seleccionando un archivo CSV con 2 columnas: <code>Pregunta, Respuesta</code>",
 	"upload.qna_csv_preview.answer": "Responder",
 	"upload.qna_csv_preview.question": "Pregunta",
-	"upload.qna_format": "Formato de respuesta",
+	"upload.question_format": "Formato de pregunta",
 	"upload.select_csv": "Seleccionar CSV",
 	"upload.select_file": "Arrastre sus archivos o haga clic aquí",
 	"upload.size_warning_1": "Los archivos multimedia no pueden exceder {{ maxMedia }} y los archivos no multimedia {{ max }}.",
