--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -844,6 +844,7 @@
 	"training.status.stopped": "Cancel·lat",
 	"training.status.succeeded": "Completado con éxito",
 	"training.training": "Entrenament",
+	"upload.answer_format": "Format de resposta",
 	"upload.check_files": "Comprova l'estat dels fitxers",
 	"upload.completed": "completat",
 	"upload.conflict": "Ja existeix un fitxer amb el mateix nom.",
@@ -864,7 +865,7 @@
 	"upload.qna_csv_description": "Creeu un recurs de preguntes i respostes seleccionant un fitxer CSV amb 2 columnes: <code>Pregunta, resposta</code>",
 	"upload.qna_csv_preview.answer": "Resposta",
 	"upload.qna_csv_preview.question": "Pregunta",
-	"upload.qna_format": "Format de resposta",
+	"upload.question_format": "Format de pregunta",
 	"upload.select_csv": "Seleccionar CSV",
 	"upload.select_file": "Arrossegueu els fitxers o feu clic aquí",
 	"upload.size_warning_1": "Els fitxers multimèdia no poden superar {{ maxMedia }} i els fitxers no multimèdia {{ max }}.",
