--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -882,6 +882,7 @@
 	"training.status.stopped": "Canceled",
 	"training.status.succeeded": "Completed successfully",
 	"training.training": "Training",
+	"upload.answer_format": "Answer format",
 	"upload.check_files": "Check file status",
 	"upload.completed": "completed",
 	"upload.conflict": "A file with the same name already exists.",
@@ -904,7 +905,7 @@
 	"upload.qna_csv_description": "Create a Q&A resource by selecting a CSV file with 2 columns: <code>Question, Answer</code>",
 	"upload.qna_csv_preview.answer": "Answer",
 	"upload.qna_csv_preview.question": "Question",
-	"upload.qna_format": "Answer format",
+	"upload.question_format": "Question format",
 	"upload.select_csv": "Select CSV",
 	"upload.select_file": "Drop your file(s) or click here",
 	"upload.size_warning_1": "Media files can not exceed {{ maxMedia }} and non-media files {{ max }}.",
