--- a/libs/search-widget/public/i18n/fr.json
+++ b/libs/search-widget/public/i18n/fr.json
@@ -28,6 +28,7 @@
 	"error.partial-results": "Désolé, le système est surchargé et n'a pu fournir qu'un résultat partiel.",
 	"error.processing": "Le traitement de cette ressource n'est pas complet",
 	"error.search": "Oups! quelque chose ne va pas. Nous y travaillons",
+	"error.service-overloaded": "Désolé, le service est surchargé et n'a pas pu fournir de réponse.",
 	"form.title-only": "Rechercher uniquement dans le titre",
 	"generic.cancel": "Annuler",
 	"generic.save": "Enregistrer",
