[sc-6030] Refactor onboarding form

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -473,43 +473,28 @@
 	"onboarding.dataset.option2.description": "Carregueu algunes carpetes, enllaços o afegiu recursos des d'un CSV perquè pugueu utilitzar Nuclia. Tingueu en compte que processar, categoritzar i indexar el contingut pot trigar una mica.",
 	"onboarding.dataset.title": "Comenceu a utilitzar Nuclia",
 	"onboarding.get_started": "Començar",
-	"onboarding.industry.chemical_industry": "Indústria química",
-	"onboarding.industry.construction": "Construcció",
-	"onboarding.industry.education": "Educació",
-	"onboarding.industry.energy": "Energia",
-	"onboarding.industry.engineering": "Enginyeria",
-	"onboarding.industry.finance": "Finances / Borsa / Inversió...",
-	"onboarding.industry.food_service": "Servei de menjar",
-	"onboarding.industry.health": "Salut",
-	"onboarding.industry.insurance": "Assegurança",
-	"onboarding.industry.IT_software": "TI / Software",
-	"onboarding.industry.legal": "Legal",
-	"onboarding.industry.manufacturing": "Fabricació",
-	"onboarding.industry.marketing": "Màrqueting",
-	"onboarding.industry.other": "Un altre",
-	"onboarding.industry.pharma": "Farmàcia",
-	"onboarding.industry.public_administration": "Administració Pública",
-	"onboarding.industry.research": "Recerca",
-	"onboarding.industry.retail": "Venda al detall",
-	"onboarding.industry.robotics": "Robòtica",
-	"onboarding.industry.sales": "Vendes",
-	"onboarding.industry.startup": "Startup",
-	"onboarding.industry.telecommunications": "Telecomunicacions",
-	"onboarding.industry_label": "En quina indústria ets?",
-	"onboarding.industry_placeholder": "Trieu una indústria",
-	"onboarding.job-title": "Títol de treball",
+	"onboarding.host_db": "Voleu allotjar la base de dades a la vostra infraestructura?",
+	"onboarding.host_db.help": "Això no afecta la vostra experiència d'usuari",
+	"onboarding.host_db.no": "No, prefereixo utilitzar el núvol de Nuclia",
+	"onboarding.host_db.yes": "Sí, allotjaré NucliaDB a la meva infraestructura",
 	"onboarding.kb_creation": "Creació d'emmagatzematge...",
+	"onboarding.org_size": "Quina mida és la teva organització?",
 	"onboarding.phone": "Número de telèfon",
 	"onboarding.phone.invalid_code": "Codi invàlid",
 	"onboarding.phone.invalid_number": "Número de telèfon no vàlid",
-	"onboarding.search_engine_label": "Quin motor de cerca utilitzeu per a dades internes?",
-	"onboarding.search_engine_placeholder": "Estic una mica decebut amb...",
 	"onboarding.setting_up": "⏳ Estem configurant el teu compte",
 	"onboarding.setting_up_subtitle": "El vostre compte estarà llest en menys d'un minut!",
 	"onboarding.storage_zone": "Les teves dades seran allotjades a Europa. Si voleu que les vostres dades s'allotgin en un altre lloc, <a href=\"https://docs.google.com/forms/d/1B9jaohdISwX-i0v34gUqkDBmJ2VXLtS96Fjs3mdIMOs\"  target=\"_blank\">ompliu aquest formulari</a>.",
 	"onboarding.subtitle": "Un parell de preguntes ràpides i us posarem en marxa.",
 	"onboarding.title": "👋​ Benvinguts a Nuclia!",
 	"onboarding.updates": "Obteniu actualitzacions ocasionals sobre Nuclia",
+	"onboarding.use_case": "Quin és el vostre cas d'ús principal?",
+	"onboarding.use_case.ai_training": "Formació pròpia del model d'IA",
+	"onboarding.use_case.global_search": "Cerca global de llocs",
+	"onboarding.use_case.other": "Un altre",
+	"onboarding.use_case.research_analysis": "Recerca i anàlisi",
+	"onboarding.use_case.support": "Suport al client/empleat",
+	"onboarding.use_case.workspace_search": "Cerca d'espais de treball",
 	"pastanaga.calendar.invalid-format": "Format de data no vàlid (format esperat: \"MMM dd, YYYY\")",
 	"pastanaga.calendar.months": "Mesos",
 	"pastanaga.calendar.years": "Anys",
@@ -888,6 +873,7 @@
 	"validation.password_mismatch": "Ep! La contrasenya no coincideix",
 	"validation.password_required": "Introdueix la contrasenya",
 	"validation.required": "Aquest camp és obligatori",
+	"validation.required_short": "Obligatori",
 	"validation.title_required": "Introdueix el títol",
 	"validation.url_required": "Introdueix una URL vàlida (per exemple https://nuclia.com)"
 }
