--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -490,43 +490,28 @@
 	"onboarding.dataset.option2.description": "Upload some folders, links or add resources from a CSV so you can use Nuclia. Be aware that processing, categorizing and indexing the content can take some time.",
 	"onboarding.dataset.title": "Start using Nuclia",
 	"onboarding.get_started": "Get started",
-	"onboarding.industry.chemical_industry": "Chemical industry",
-	"onboarding.industry.construction": "Construction",
-	"onboarding.industry.education": "Education",
-	"onboarding.industry.energy": "Energy",
-	"onboarding.industry.engineering": "Engineering",
-	"onboarding.industry.finance": "Finance / Stock market / Investment...",
-	"onboarding.industry.food_service": "Food service",
-	"onboarding.industry.health": "Health",
-	"onboarding.industry.insurance": "Insurance",
-	"onboarding.industry.IT_software": "IT / Software",
-	"onboarding.industry.legal": "Legal",
-	"onboarding.industry.manufacturing": "Manufacturing",
-	"onboarding.industry.marketing": "Marketing",
-	"onboarding.industry.other": "Other",
-	"onboarding.industry.pharma": "Pharma",
-	"onboarding.industry.public_administration": "Public administration",
-	"onboarding.industry.research": "Research",
-	"onboarding.industry.retail": "Retail",
-	"onboarding.industry.robotics": "Robotics",
-	"onboarding.industry.sales": "Sales",
-	"onboarding.industry.startup": "Startup",
-	"onboarding.industry.telecommunications": "Telecommunications",
-	"onboarding.industry_label": "What industry are you in? ",
-	"onboarding.industry_placeholder": "Choose an industry",
-	"onboarding.job-title": "Job title",
+	"onboarding.host_db": "Will you want to host the database in your infrastructure?",
+	"onboarding.host_db.help": "This does not affect your users experience",
+	"onboarding.host_db.no": "No, I prefer to use Nuclia’s cloud",
+	"onboarding.host_db.yes": "Yes, I will host NucliaDB in my infrastructure",
 	"onboarding.kb_creation": "Storage creation…",
+	"onboarding.org_size": "How big is your organization?",
 	"onboarding.phone": "Phone number",
 	"onboarding.phone.invalid_code": "Invalid code",
 	"onboarding.phone.invalid_number": "Invalid phone number",
-	"onboarding.search_engine_label": "What search engine are you using for internal data?",
-	"onboarding.search_engine_placeholder": "I'm a little disappointed with…",
 	"onboarding.setting_up": "⏳ ​ We’re setting your account up",
 	"onboarding.setting_up_subtitle": "Your account will be ready in less than a minute! ",
 	"onboarding.storage_zone": "Your data will be hosted in Europe. If you would like your data to be hosted elsewhere, <a href=\"https://docs.google.com/forms/d/1B9jaohdISwX-i0v34gUqkDBmJ2VXLtS96Fjs3mdIMOs\"  target=\"_blank\">fill this form</a>.",
 	"onboarding.subtitle": "A couple of quick questions, and we'll get you started.",
 	"onboarding.title": "👋​ Welcome to Nuclia!",
 	"onboarding.updates": "Get occasional updates about Nuclia",
+	"onboarding.use_case": "What is your main use case?",
+	"onboarding.use_case.ai_training": "Own AI model training",
+	"onboarding.use_case.global_search": "Global site search",
+	"onboarding.use_case.other": "Other",
+	"onboarding.use_case.research_analysis": "Research & Analysis",
+	"onboarding.use_case.support": "Customer / employee support",
+	"onboarding.use_case.workspace_search": "Workspace Search",
 	"pastanaga.calendar.invalid-format": "Invalid date format (expected format: \"MMM dd, YYYY\")",
 	"pastanaga.calendar.months": "Months",
 	"pastanaga.calendar.years": "Years",
@@ -928,6 +913,7 @@
 	"validation.password_mismatch": "Password does not match",
 	"validation.password_required": "Add your password",
 	"validation.required": "Required field",
+	"validation.required_short": "Required",
 	"validation.title_required": "Enter title",
 	"validation.url_required": "Enter a valid URL (e.g. https://nuclia.com)",
 	"widget.show-api": "Show API endpoint"
