--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -473,43 +473,28 @@
 	"onboarding.dataset.option2.description": "Cargue algunas carpetas, enlaces o agregue recursos desde un CSV para que pueda usar Nuclia. Tenga en cuenta que procesar, categorizar e indexar el contenido puede llevar algún tiempo.",
 	"onboarding.dataset.title": "Comienza a usar Nuclia",
 	"onboarding.get_started": "Empezar",
-	"onboarding.industry.chemical_industry": "Industria química",
-	"onboarding.industry.construction": "Construcción",
-	"onboarding.industry.education": "Educación",
-	"onboarding.industry.energy": "Energía",
-	"onboarding.industry.engineering": "Ingeniería",
-	"onboarding.industry.finance": "Finanzas / Bolsa / Inversiones...",
-	"onboarding.industry.food_service": "Servicio de comida",
-	"onboarding.industry.health": "Salud",
-	"onboarding.industry.insurance": "Seguro",
-	"onboarding.industry.IT_software": "TI / Software",
-	"onboarding.industry.legal": "Legal",
-	"onboarding.industry.manufacturing": "Fabricación",
-	"onboarding.industry.marketing": "Márketing",
-	"onboarding.industry.other": "Otro",
-	"onboarding.industry.pharma": "Farmacéutica",
-	"onboarding.industry.public_administration": "Administración Pública",
-	"onboarding.industry.research": "Investigación",
-	"onboarding.industry.retail": "Al por menor",
-	"onboarding.industry.robotics": "Robótica",
-	"onboarding.industry.sales": "Ventas",
-	"onboarding.industry.startup": "Startup",
-	"onboarding.industry.telecommunications": "Telecomunicaciones",
-	"onboarding.industry_label": "En que industria estás?",
-	"onboarding.industry_placeholder": "Elige una industria",
-	"onboarding.job-title": "Título profesional",
+	"onboarding.host_db": "¿Querrá alojar la base de datos en su infraestructura?",
+	"onboarding.host_db.help": "Esto no afecta la experiencia de sus usuarios.",
+	"onboarding.host_db.no": "No, prefiero usar la nube de Nuclia",
+	"onboarding.host_db.yes": "Sí, alojaré NucliaDB en mi infraestructura",
 	"onboarding.kb_creation": "Creación de almacenamiento…",
+	"onboarding.org_size": "¿Qué tan grande es su organización?",
 	"onboarding.phone": "Número de teléfono",
 	"onboarding.phone.invalid_code": "Codigo invalido",
 	"onboarding.phone.invalid_number": "Numero de telefono invalido",
-	"onboarding.search_engine_label": "¿Qué motor de búsqueda está utilizando para los datos internos?",
-	"onboarding.search_engine_placeholder": "Estoy un poco decepcionado con…",
 	"onboarding.setting_up": "⏳ Estamos configurando tu cuenta",
 	"onboarding.setting_up_subtitle": "¡Tu cuenta estará lista en menos de un minuto!",
 	"onboarding.storage_zone": "Tus datos estarán alojados en Europa. Si desea que sus datos se alojen en otro lugar, <a href=\"https://docs.google.com/forms/d/1B9jaohdISwX-i0v34gUqkDBmJ2VXLtS96Fjs3mdIMOs\"  target=\"_blank\">complete este formulario</a>.",
 	"onboarding.subtitle": "Un par de preguntas rápidas y lo ayudaremos a comenzar.",
 	"onboarding.title": "👋​ ¡Bienvenidos a Nuclia!",
 	"onboarding.updates": "Recibe actualizaciones ocasionales sobre Nuclia",
+	"onboarding.use_case": "¿Cuál es su principal caso de uso?",
+	"onboarding.use_case.ai_training": "Entrenamiento propio del modelo de IA",
+	"onboarding.use_case.global_search": "Búsqueda global del sitio",
+	"onboarding.use_case.other": "Otro",
+	"onboarding.use_case.research_analysis": "Investigación y análisis",
+	"onboarding.use_case.support": "Atención al cliente/empleado",
+	"onboarding.use_case.workspace_search": "Búsqueda de espacio de trabajo",
 	"pastanaga.calendar.invalid-format": "Formato de fecha no válido (formato esperado: \"MMM dd, YYYY\")",
 	"pastanaga.calendar.months": "Meses",
 	"pastanaga.calendar.years": "Años",
@@ -888,6 +873,7 @@
 	"validation.password_mismatch": "Ups! La contraseña no coincide",
 	"validation.password_required": "Añade tu contraseña",
 	"validation.required": "Este campo es obligatorio",
+	"validation.required_short": "Necesario",
 	"validation.title_required": "Introduce el título",
 	"validation.url_required": "Introduce una URL válida (por ejemplo https://nuclia.com)"
 }
