--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -82,8 +82,7 @@
 	"account.stash.upgrade": "Increase KB maximum",
 	"account.stash.users": "Users management",
 	"account.threshold": "Consumption threshold",
-	"account.title": "Account name",
-	"account.title_help": "Account name",
+	"account.title": "Name",
 	"account.token_description": "<strong>Important!</strong> Copy and save the Token code. It will disappear once added.",
 	"account.token_generation_warning": "If you generate a new key, the current key will be disabled and any ongoing jobs will be lost",
 	"account.total_queries": "Total number of queries",
