Replace select by checkboxes

--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -789,7 +789,7 @@
 	"stash.widgets.configuration": "Configuracion de Widget",
 	"stash.widgets.editLabels": "Editar etiquetas",
 	"stash.widgets.editLabels.help": "Permite agregar/eliminar etiquetas desde la vista de recursos",
-	"stash.widgets.entities": "Entidades",
+	"stash.widgets.entities": "Filtrar por entidades",
 	"stash.widgets.entityAnnotation": "Anotación de entidad",
 	"stash.widgets.entityAnnotation.help": "Habilita la anotación de entidades en el visor",
 	"stash.widgets.filter": "Filtrar",
@@ -797,8 +797,7 @@
 	"stash.widgets.filter_type": "Tipos de filtro",
 	"stash.widgets.hint_1": "Para mostrar correctamente los resultados, el ancho de la barra de búsqueda no debería ser inferior a 384px.",
 	"stash.widgets.hint_2": "Si el color de fondo de su página de búsqueda no es neutral, recuerde agregar un color de fondo en su cuadro de búsqueda para que sea más fácil de leer.",
-	"stash.widgets.labels": "Etiquetas",
-	"stash.widgets.labels_entities": "Etiquetas y entidades",
+	"stash.widgets.labels": "Filtrar per etiquetas",
 	"stash.widgets.navigateToFile": "Navega hacia los archivos",
 	"stash.widgets.navigateToFile.help": "Al usar Nuclia para buscar páginas web, hacer clic en un resultado abrirá el archivo original en lugar de mostrarlo en el visor.",
 	"stash.widgets.navigateToLink": "Navega hacia los enlaces",
