--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -819,7 +819,7 @@
 	"stash.widgets.configuration": "Widget configuration",
 	"stash.widgets.editLabels": "Edit labels",
 	"stash.widgets.editLabels.help": "Allows to add/remove labels from the resource view",
-	"stash.widgets.entities": "Entities",
+	"stash.widgets.entities": "Filter by entities",
 	"stash.widgets.entityAnnotation": "Entity annotation",
 	"stash.widgets.entityAnnotation.help": "Enables entity annotation in the viewer",
 	"stash.widgets.filter": "Filter",
@@ -827,8 +827,7 @@
 	"stash.widgets.filter_type": "Filter types",
 	"stash.widgets.hint_1": "For the correct reading of the results, the width of the search bar should not be less than 384px.",
 	"stash.widgets.hint_2": "If your search page background color isn't neutral, remember to add a background color on your search box to make it easier to read.",
-	"stash.widgets.labels": "Labels",
-	"stash.widgets.labels_entities": "Labels and entities",
+	"stash.widgets.labels": "Filter by labels",
 	"stash.widgets.navigateToFile": "Navigate to files",
 	"stash.widgets.navigateToFile.help": "When using Nuclia to search web pages, clicking on a result will open the original file rather than rendering it in the viewer",
 	"stash.widgets.navigateToLink": "Navigate to links",
