pdf annotation (using Pawls)

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -346,6 +346,7 @@
 	"label-set.form.name-required": "El nom del conjunt d'etiquetes és obligatori",
 	"label-set.paragraphs": "Paràgrafs",
 	"label-set.resources": "Recursos",
+	"label-set.selections": "Seleccions",
 	"label-set.subtitle": "Exploreu i editeu conjunts d'etiquetes",
 	"label-set.title": "Conjunts d'etiquetes",
 	"language.ca": "Català",
@@ -633,6 +634,7 @@
 	"resource.tooltip.classification": "Classificació",
 	"resource.tooltip.delete": "Suprimeix",
 	"resource.tooltip.edition": "Edició",
+	"resource.tooltip.pdf-annotation": "Anotar per selecció",
 	"resource.tooltip.preview": "Vista prèvia",
 	"resource.tooltip.reprocess": "Reprocessament",
 	"resource.visible_columns_dropdown": "Columnes mostrades",
