--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -362,6 +362,7 @@
 	"label-set.form.name-required": "Label set name is required",
 	"label-set.paragraphs": "Paragraphs",
 	"label-set.resources": "Resources",
+	"label-set.selections": "Selections",
 	"label-set.subtitle": "Browse and edit label sets",
 	"label-set.title": "Label sets",
 	"language.ca": "Catalan",
@@ -653,6 +654,7 @@
 	"resource.tooltip.classification": "Classification",
 	"resource.tooltip.delete": "Delete",
 	"resource.tooltip.edition": "Edition",
+	"resource.tooltip.pdf-annotation": "Annotate by selection",
 	"resource.tooltip.preview": "Preview",
 	"resource.tooltip.reprocess": "Reprocess",
 	"resource.visible_columns_dropdown": "Displayed columns",
