--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -346,6 +346,7 @@
 	"label-set.form.name-required": "El nombre del conjunto de etiquetas es obligatorio",
 	"label-set.paragraphs": "Párrafos",
 	"label-set.resources": "Recursos",
+	"label-set.selections": "Selección",
 	"label-set.subtitle": "Examinar y editar conjuntos de etiquetas",
 	"label-set.title": "Conjuntos de etiquetas",
 	"language.ca": "Catalán",
@@ -633,6 +634,7 @@
 	"resource.tooltip.classification": "Clasificación",
 	"resource.tooltip.delete": "Borrar",
 	"resource.tooltip.edition": "Edición",
+	"resource.tooltip.pdf-annotation": "Anotar por selección",
 	"resource.tooltip.preview": "Avance",
 	"resource.tooltip.reprocess": "Reprocesar",
 	"resource.visible_columns_dropdown": "Columnas mostradas",
