--- a/libs/search-widget/public/i18n/es.json
+++ b/libs/search-widget/public/i18n/es.json
@@ -25,6 +25,7 @@
 	"entities.time": "Tiempo",
 	"entities.title": "Insights",
 	"entities.work_of_art": "Obras",
+	"error.answer-feature-blocked": "La funcionalidad de respuestas no está permitida en este momento.",
 	"error.audio-loading": "Ocurrió un error al cargar el archivo de audio.",
 	"error.feature-blocked": "La función de búsqueda no está permitida en este momento.",
 	"error.partial-results": "Lo sentimos, el sistema está sobrecargado y solo pudo proporcionar un resultado parcial.",
