Display item (ie. field) list in viewer

--- a/libs/search-widget/public/i18n/en.json
+++ b/libs/search-widget/public/i18n/en.json
@@ -65,6 +65,7 @@
 	"tile.find-in-image": "Find in image",
 	"tile.find-in-video": "Find in video",
 	"tile.full-transcripts": "Full transcript",
+	"tile.items": "Items",
 	"tile.search-results": "{{count}} search results",
 	"tile.summary": "Summary"
 }
