--- a/libs/search-widget/public/i18n/ca.json
+++ b/libs/search-widget/public/i18n/ca.json
@@ -64,6 +64,7 @@
 	"tile.find-in-image": "Buscar a la imatge",
 	"tile.find-in-video": "Troba al vídeo",
 	"tile.full-transcripts": "Transcripció completa",
+	"tile.items": "Elements",
 	"tile.search-results": "{{count}} resultats de cerca",
 	"tile.summary": "Resum"
 }
