--- a/libs/search-widget/public/i18n/es.json
+++ b/libs/search-widget/public/i18n/es.json
@@ -64,6 +64,7 @@
 	"tile.find-in-image": "Buscar en la imagen",
 	"tile.find-in-video": "Encontrar en vídeo",
 	"tile.full-transcripts": "Transcripción completa",
+	"tile.items": "Elementos",
 	"tile.search-results": "{{count}} resultados de búsqueda",
 	"tile.summary": "Resumen"
 }
