[sc-5904] Fix expiration days

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -20,6 +20,7 @@
 	"account.config": "Configuració del compte",
 	"account.consuming": "Processament",
 	"account.create_new_db": "Crear nou compte Nuclia DB",
+	"account.day_left": "Queda 1 dia",
 	"account.days_left": "Queden {{days}} dies",
 	"account.db_zone_description": "Escull la zona i el proveïdor de processament que vols fer servir per aquesta compte. De forma predeterminada apareix la zona escollida a l’Account",
 	"account.delete.error": "S'ha produït un error al eliminar el compte",
@@ -59,7 +60,6 @@
 	"account.nua_webhook": "Webhook URL",
 	"account.nua_webhook.help": "Un cop processades les teves dades, el resultat es publica a aquest URL",
 	"account.public": "Públic",
-	"account.quota_exhausted": "Quota exhaurida",
 	"account.related_kbs": "Knowledge Box relacionats amb l’Account",
 	"account.replace_config": "Reemplaçar configuració",
 	"account.settings": "Preferències de l’Account",
