--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -20,6 +20,7 @@
 	"account.config": "Configuración de la cuenta",
 	"account.consuming": "Procesamiento",
 	"account.create_new_db": "Crear nueva cuenta de Nuclia DB",
+	"account.day_left": "Queda 1 día",
 	"account.days_left": "Quedan {{days}} días",
 	"account.db_zone_description": "Elige la zona y el proveedor de procesamiento que quieres utilizar para esta cuenta. De forma predeterminada aparece la zona escogida en el Account",
 	"account.delete.error": "Se ha producido un error al eliminar la cuenta",
@@ -59,7 +60,6 @@
 	"account.nua_webhook": "Webhook URL",
 	"account.nua_webhook.help": "Una vez que se procesan sus datos, el resultado se publica en esta URL",
 	"account.public": "Público",
-	"account.quota_exhausted": "Cuota agotada",
 	"account.related_kbs": "Cajas de conocimiento de la cuenta",
 	"account.replace_config": "Reemplazar configuración",
 	"account.settings": "Preferencias de la cuenta",
