--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -21,6 +21,7 @@
 	"account.consuming": "Consuming",
 	"account.create_new_db": "Create a new Nuclia DB account",
 	"account.create_nua_key": "Create new Nuclia understanding API key ",
+	"account.day_left": "1 day left",
 	"account.days_left": "{{days}} days left",
 	"account.db_zone_description": "Select the zone and the processing provider you would like to use for this account (defaults to the account’s zone)",
 	"account.delete.error": "Error when deleting the account",
@@ -66,7 +67,6 @@
 	"account.nua_webhook": "Webhook URL",
 	"account.nua_webhook.help": "Once your data is processed, the result is posted to this URL",
 	"account.public": "Public",
-	"account.quota_exhausted": "Quota exhausted",
 	"account.related_kbs": "Account’s Knowledge Boxes",
 	"account.renewal": "Processing consumption renews monthly",
 	"account.replace_config": "Replace settings",
