--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -669,6 +669,9 @@
 	"stash.add_user": "Afegeix l'usuari",
 	"stash.added_user": "L'usuari {{user}} s'ha afegit",
 	"stash.config.azure_openai": "Azure OpenAI key",
+	"stash.config.chatgpt": "ChatGPT OpenAI",
+	"stash.config.chatgpt-azure": "ChatGPT Azure OpenAI",
+	"stash.config.generative-multilingual-2023": "Nuclia multilingual private model",
 	"stash.config.openai": "OpenAI key",
 	"stash.contact_admin": "No esteu autoritzat per crear un quadre de coneixement. Contacta amb el teu administrador.",
 	"stash.create": "Crea una caixa de coneixement",
