--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -669,6 +669,9 @@
 	"stash.add_user": "Añadir usuario",
 	"stash.added_user": "El usuario {{user}} ha sido añadido",
 	"stash.config.azure_openai": "Azure OpenAI key",
+	"stash.config.chatgpt": "ChatGPT OpenAI",
+	"stash.config.chatgpt-azure": "ChatGPT Azure OpenAI",
+	"stash.config.generative-multilingual-2023": "Nuclia multilingual private model",
 	"stash.config.openai": "OpenAI key",
 	"stash.contact_admin": "No está autorizado para crear un cuadro de conocimiento. Póngase en contacto con su administrador.",
 	"stash.create": "Crea una caja de conocimiento",
