--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -689,6 +689,9 @@
 	"stash.add_user": "Add user",
 	"stash.added_user": "{{user}} has been added",
 	"stash.config.azure_openai": "Azure OpenAI key",
+	"stash.config.chatgpt": "ChatGPT OpenAI",
+	"stash.config.chatgpt-azure": "ChatGPT Azure OpenAI",
+	"stash.config.generative-multilingual-2023": "Nuclia multilingual private model",
 	"stash.config.openai": "OpenAI key",
 	"stash.contact_admin": "You are not authorized to create a knowledge box. Contact your administrator.",
 	"stash.create": "Create a knowledge box",
