--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -693,6 +693,7 @@
 	"stash.config.chatgpt-azure": "ChatGPT Azure OpenAI",
 	"stash.config.generative-multilingual-2023": "Nuclia multilingual private model",
 	"stash.config.openai": "OpenAI key",
+	"stash.config.own_key": "Use own key",
 	"stash.contact_admin": "You are not authorized to create a knowledge box. Contact your administrator.",
 	"stash.create": "Create a knowledge box",
 	"stash.create.anonymization_model": "Anonymization ",
