[sc-6298] Support conditional fields in knowledge box configuration form (#882)
* [sc-6298] Support conditional fields in knowledge box configuration form

* Revert changes

* Adapt to last backend changes

* fix unit test

* Fixes

* Fix

* Add translations

* Add feature flag

* Make own key optional

* Fix

---------

Co-authored-by: Eric BREHAULT <ebrehault@gmail.com>

--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -688,6 +688,12 @@
 	"standalone.upload-no-nua-key": "You are not connected to the <strong>nuclia.cloud</strong> server and new data won’t be processed.",
 	"stash.add_user": "Add user",
 	"stash.added_user": "{{user}} has been added",
+	"stash.config.azure_openai": "Azure OpenAI key",
+	"stash.config.chatgpt": "ChatGPT OpenAI",
+	"stash.config.chatgpt-azure": "ChatGPT Azure OpenAI",
+	"stash.config.generative-multilingual-2023": "Nuclia multilingual private model",
+	"stash.config.openai": "OpenAI key",
+	"stash.config.own_key": "Use own key",
 	"stash.contact_admin": "You are not authorized to create a knowledge box. Contact your administrator.",
 	"stash.create": "Create a knowledge box",
 	"stash.create.anonymization_model": "Anonymization ",
