[sc-6226] Implement the delete account flow

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -23,7 +23,15 @@
 	"account.day_left": "Queda 1 dia",
 	"account.days_left": "Queden {{days}} dies",
 	"account.db_zone_description": "Escull la zona i el proveïdor de processament que vols fer servir per aquesta compte. De forma predeterminada apareix la zona escollida a l’Account",
+	"account.delete.defer_delete": "Suprimeix el meu compte quan finalitzi la meva subscripció.",
+	"account.delete.delete_immediately": "Elimina el meu compte immediatament.",
+	"account.delete.delete_user": "Eliminar el meu usuari",
+	"account.delete.deletion_scheduled": "Se ha programado la eliminación de su cuenta.",
 	"account.delete.error": "S'ha produït un error al eliminar el compte",
+	"account.delete.expiration": "La teva subscripció caduca el",
+	"account.delete.keep_user": "Mantenir el meu usuari",
+	"account.delete.keep_user_title": "Vols mantenir el teu perfil d'usuari?",
+	"account.delete.subscription_detected": "S'ha detectat una subscripció activa",
 	"account.delete_account": "Eliminar compte",
 	"account.delete_account_confirm": "Vull eliminar el compte {{account}} i totes les dades que conté.",
 	"account.delete_account_confirm_title": "Eliminar el compte?",
