--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -24,7 +24,15 @@
 	"account.day_left": "1 day left",
 	"account.days_left": "{{days}} days left",
 	"account.db_zone_description": "Select the zone and the processing provider you would like to use for this account (defaults to the account’s zone)",
+	"account.delete.defer_delete": "Delete my account when my subscription ends.",
+	"account.delete.delete_immediately": "Delete my account immediately.",
+	"account.delete.delete_user": "Delete my user",
+	"account.delete.deletion_scheduled": "Deletion of your account has been scheduled.",
 	"account.delete.error": "Error when deleting the account",
+	"account.delete.expiration": "Your subscription expires on",
+	"account.delete.keep_user": "Keep my user",
+	"account.delete.keep_user_title": "Would you like to keep your user profile?",
+	"account.delete.subscription_detected": "Active subscription detected",
 	"account.delete_account": "Delete account",
 	"account.delete_account_confirm": "I want to delete the  {{account}} account and all its associated data.",
 	"account.delete_account_confirm_title": "Delete the account?",
