--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -23,7 +23,15 @@
 	"account.day_left": "Queda 1 día",
 	"account.days_left": "Quedan {{days}} días",
 	"account.db_zone_description": "Elige la zona y el proveedor de procesamiento que quieres utilizar para esta cuenta. De forma predeterminada aparece la zona escogida en el Account",
+	"account.delete.defer_delete": "Eliminar mi cuenta cuando finalice mi suscripción.",
+	"account.delete.delete_immediately": "Eliminar mi cuenta inmediatamente.",
+	"account.delete.delete_user": "Eliminar mi usuario",
+	"account.delete.deletion_scheduled": "S'ha programat la supressió del vostre compte.",
 	"account.delete.error": "Se ha producido un error al eliminar la cuenta",
+	"account.delete.expiration": "Tu suscripción caduca el",
+	"account.delete.keep_user": "Mantener mi usuario",
+	"account.delete.keep_user_title": "¿Quieres mantener tu perfil de usuario?",
+	"account.delete.subscription_detected": "Suscripción activa detectada",
 	"account.delete_account": "Eliminar cuenta",
 	"account.delete_account_confirm": "Quiero eliminar la cuenta {{account}} y todos los datos que contiene.",
 	"account.delete_account_confirm_title": "Eliminar la cuenta?",
